--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,6 @@
 <head>
 <meta name="description" content="Basic Portfolio">
-<meta name="author" content="name goes here">
+<meta name="author" content="Fredrick Qiu">
 <meta charset="UTF-8">
 <title>lived experiences project | my portfolio</title>
 <link type="text/css" rel="stylesheet" href="style.css">
@@ -19,7 +19,7 @@
                 </ul>
         </header>
         <main>
-                <h1>lived experiences project title</h1>
+                <h1>lived experiences project- Video Response</h1>
                 <p>I believe the purpose of the video is to inform, educate, and warn people about suicide, love, and sexuality.
                 Through the explaination of the suicide of his uncle, the viewers develop a feeling of sadness and sympathy.
                 Not everyone knows how it is to lose a loved one, but in this case, we can see how harsh and unforgiving it is on this young man.
