--- a/remix.html
+++ b/remix.html
@@ -23,21 +23,20 @@
 
 		<article>
 			<h1>Remix Memo</h1>
-			<p>
-			Composing in Context
+			<p>Composing in Context:
 	We chose to do our project about poverty and its affects. Choosing this topic came with a little bit of difficulty. It seemed a very wide and easy topic to talk about, but we eventually found out that it’s not. Poverty exists all over the world, mostly in third and second world countries, but in places like the US, it’s not as prominent. We chose to talk about poverty in the US, as it isn’t talked about very often anymore. Many of the problems poverty faces in other countries are much more severe and worse than that in the United States, which is why it is harder to convey serious messages about it; I.e. starvation in the US is not as severe as in Ethiopia, homelessness rates are much higher in many other countries than in America. However, it still exists, which is why we chose to do a project about this topic. 
-Process
+<p>Process:
 	We chose poverty as our topic because, among our group members, poverty seemed to be the best topic to do a documentary style project on. The most challenging part of the project was to brainstorm and come up with meaningful material. The documentary is not in the same format or orientation as the previous, already written essay about it. We did not take a systematic approach, we took a chronological approach instead. We came up with ideas and branched off from what we had. We used one word document to collectively find information and post it on d2l, so we could all access and revise over the information. 
-Research
+</p><p>Research: 
 	I did not do a lot of researching, but a lot of the facts, graphs and sources our group put together were from internet articles and other internet sources. I think the most beneficial were the articles containing solid facts or statistics that were backed up by studies. The graphs that we found were very informational and useful for our project. 
-Collaboration
+</p><p>Collaboration: 
 	No one worked on the project alone. Our group always met up in a group when it was possible, even working at night and on weekends. During our work, everyone participated and stayed involved, either looking for things to put in the video, researching, or documenting and organizing things. I think working in groups was a good experience. It wasn’t only fun to meet new people and work with them, but it also helps everyone understand what group projects will be like for the rest of our college years (we were mostly freshman).  
-Project Management
+</p><p>Project Management: 
 	We did not plan the project very well, it was very hard for our group to get started, but once we got started, it was much smoother. If I were to do the project over again, I would have started brainstorming a lot earlier. We didn’t account for how long it would take to come up with ideas for the documentary. 
-Documentary Design
+</p><p>Documentary Design
 	The most effective aspect of our documentary is its organization. Our documentary is organized so it covers the different specific effects in order of severity. At the end, we talk about more touching subjects than in the beginning. It’s also in a style where there’s a lot of images and movement to keep the audience attached. We collectively made our design decisions, often by vote. If someone didn’t like the design, it was discussed a little more (this didn’t happen often and most of the times everyone agreed).  
-	
-			</p>
+</p>
+		
 		</article>
 		<footer>
 		<p>
