--- a/remix.html
+++ b/remix.html
@@ -23,7 +23,7 @@
 
 		<article>
 			<h1>Remix Memo</h1>
-			<a href="https://www.youtube.com/watch?v=v_4qobkoV-g&feature=youtu.be">Link text</a>
+			<a href="https://www.youtube.com/watch?v=v_4qobkoV-g&feature=youtu.be">Video Link</a>
 			<p>Composing in Context:
 	We chose to do our project about poverty and its affects. Choosing this topic came with a little bit of difficulty. It seemed a very wide and easy topic to talk about, but we eventually found out that it’s not. Poverty exists all over the world, mostly in third and second world countries, but in places like the US, it’s not as prominent. We chose to talk about poverty in the US, as it isn’t talked about very often anymore. Many of the problems poverty faces in other countries are much more severe and worse than that in the United States, which is why it is harder to convey serious messages about it; I.e. starvation in the US is not as severe as in Ethiopia, homelessness rates are much higher in many other countries than in America. However, it still exists, which is why we chose to do a project about this topic. 
 <p>Process:
