--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <head>
 <meta name="description" content="Basic Portfolio">
-<meta name="author" content="name goes here">
+<meta name="author" content="Fredrick Qiu">
 <meta charset="UTF-8">
 <link type="text/css" rel="stylesheet" href="style.css">
 <title>my portfolio</title>
@@ -22,10 +22,46 @@
 		</header>
 		<main>
 			<h1>about me</h1>
-			<p>blah, blah, blah...</p>
+			<img src="http://images.ak.instagram.com/profiles/profile_49380659_75sq_1350669123.jpg"/>
+			<p style="font-family:Impact;font-size:25"><em>I'm <strong>refrigerator</strong> cool</em></p>
+			<ul>
+	    			<li>Age: 18</li>
+	    			<li>Gender: Male</li>
+	    			<li>Hometown: Oxford</li>
+			</ul>
+			<p>
+			<h4>Interests</h4>
+				<ul>
+	    				<li>Reddit</li>
+	        				<ol>
+	            					<li>commenting</li>
+	            					<li>lurking</li>
+	            					<li>upvoting</li>
+	        				</ol>
+	    				<li>Tumblr</li>
+	    				<li>League of Legends</li>
+	    				<li>I basically have no life, but yeah.</li>
+				</ul>
+			<h4>Favorite Foods></h4>
+				<ol>
+	    				<li>Sushi</li>
+	        				<ul>
+	            					<li>Tuna sashimi</li>
+	            					<li>dragon roll</li>
+	            					<li>philadelphia roll</li>
+	        				</ul>
+	    				<li>Cold Pasta</li>
+	    				<li>Sandwiches</li>
+	        				<ul>
+	            					<li>ruben</li>
+	            					<li>blt</li>
+	            					<li>Pulled pork</li>
+	        				</ul>
+				</ol>
+			and yeah. Now you basically know who I am.</p>
 		</main>
 		<footer>
-		<p>&copy; 2013 [Name goes here]</p>
+		<p>&copy; 2013 [Fredrick Qiu]</p>
 		</footer>
 	</content>
 </body>	
