--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 		<main>
 			<h1>about me</h1>
 			<img src="http://images.ak.instagram.com/profiles/profile_49380659_75sq_1350669123.jpg"/>
-			<p style="font-family:Impact;font-size:25"><em>I'm <strong>refrigerator</strong> cool</em></p>
+			<p style="font-family:Impact;font-size:60"><em>I'm <strong>refrigerator</strong> cool</em></p>
+			<p style="font-size:8>Ooh Killem</p>
 			<ul>
 	    			<li>Age: 18</li>
 	    			<li>Gender: Male</li>
