--- a/formal7.html
+++ b/formal7.html
@@ -15,9 +15,9 @@
 			<li><a href="lived.html">lived <br />experiences</a></li>
 			<li><a href="cultural.html">cultural <br />analysis</a></li>
 			<li><a href="formal.html">formal <br />research</a></li>
-			<li><a href="#">remix</a></li>
-			<li><a href="#">course <br />retrospective</a></li>
-			<li><a href="#">blog</a></li>
+			<li><a href="remix.html">remix</a></li>
+			<li><a href="retro.html">course <br />retrospective</a></li>
+			<li><a href="blog.html">blog</a></li>
 		</ul>
 		</header>
 		<div id="menu">
@@ -33,7 +33,7 @@
 		</div>
 		<article>
 			<h1>Conclusion</h1>
-			<p>After the HITECH act, communication runs more smoothly between healthcare professionals. Whether it be diagnosing blood type, or lung cancer research, laboratory scientists adhere to the most elemental disciplines. Laboratory scientists rely on steady hands, good note taking, reliable equipment, communication and knowledge. Communication is not only vital in the laboratory to analyze, diagnose and discuss among other scientists, but it is important to the entire healthcare system. Medicine research especially, relies heavily on paperwork, and data collection that are connected and shared in other places. Like Mccown and Diamandis said, it’s important to practice and become experienced to become a good lab scientist. </p>
+			<p>After the HITECH act, communication runs more smoothly between healthcare professionals. Whether it be diagnosing blood type, or lung cancer research, laboratory scientists adhere to the most elemental disciplines. Laboratory scientists rely on steady hands, good note taking, reliable equipment, communication and knowledge. Communication is not only vital in the laboratory to analyze, diagnose and discuss among other scientists, but it is important to the entire healthcare system. Medicine research especially, relies heavily on paperwork, and data collection that are connected and shared in other places. Like Mccown and Diamandis said, itï¿½s important to practice and become experienced to become a good lab scientist. </p>
 		</article>
 		<footer>
 		<p>&copy; 2014 [Fredick Qiu]</p>
