--- a/formal4.html
+++ b/formal4.html
@@ -15,9 +15,9 @@
 			<li><a href="lived.html">lived <br />experiences</a></li>
 			<li><a href="cultural.html">cultural <br />analysis</a></li>
 			<li><a href="formal.html">formal <br />research</a></li>
-			<li><a href="#">remix</a></li>
-			<li><a href="#">course <br />retrospective</a></li>
-			<li><a href="#">blog</a></li>
+			<li><a href="remix.html">remix</a></li>
+			<li><a href="retro.html">course <br />retrospective</a></li>
+			<li><a href="blog.html">blog</a></li>
 		</ul>
 		</header>
 		<div id="menu">
@@ -33,7 +33,7 @@
 		</div>
 		<article>
 			<h1>Communication Section</h1>
-			<p>The way information is communicated between healthcare professionals is often through form; either in physical paper by mail or by fax, to computer generated forms, emails, and database. In clinical practice, laboratory scientists receive requests from physicians or from a company to analyze and record data from very specific things, for very specific reasons.  In the fast paced health care industry today, clinical labs have to work extremely efficiently and one of the largest bottlenecks of this is communication. Because of the role of clinical labs, laboratory scientists must work efficiently and accurately. In many situations, physicians need information quickly to help a patient, or to diagnose someone’s condition.  Before the Since the recent healthcare reforms, laboratory scientists have been more involved with technology; communication is more often through computer database, and laboratory procedure relies more on clinical technology. The communication in modern laboratory science heavily relies on database technology, whether it be paper or EHR (electronic health record). </p>
+			<p>The way information is communicated between healthcare professionals is often through form; either in physical paper by mail or by fax, to computer generated forms, emails, and database. In clinical practice, laboratory scientists receive requests from physicians or from a company to analyze and record data from very specific things, for very specific reasons.  In the fast paced health care industry today, clinical labs have to work extremely efficiently and one of the largest bottlenecks of this is communication. Because of the role of clinical labs, laboratory scientists must work efficiently and accurately. In many situations, physicians need information quickly to help a patient, or to diagnose someoneï¿½s condition.  Before the Since the recent healthcare reforms, laboratory scientists have been more involved with technology; communication is more often through computer database, and laboratory procedure relies more on clinical technology. The communication in modern laboratory science heavily relies on database technology, whether it be paper or EHR (electronic health record). </p>
 		</article>
 		<footer>
 		<p>&copy; 2014 [Fredrick Qiu]</p>
