--- a/formal2.html
+++ b/formal2.html
@@ -15,9 +15,9 @@
 			<li><a href="lived.html">lived <br />experiences</a></li>
 			<li><a href="cultural.html">cultural <br />analysis</a></li>
 			<li><a href="formal.html">formal <br />research</a></li>
-			<li><a href="#">remix</a></li>
-			<li><a href="#">course <br />retrospective</a></li>
-			<li><a href="#">blog</a></li>
+			<li><a href="remix.html">remix</a></li>
+			<li><a href="retro.html">course <br />retrospective</a></li>
+			<li><a href="blog.html">blog</a></li>
 		</ul>
 		</header>
 		<div id="menu">
@@ -35,7 +35,7 @@
 			<h1>Introduction</h1>
 			<p>In 2009 and 2010, the United States issued the HITECH Act (Health Information Technology for Economic and Clinical Health) and the ACA (Protection and Affordable Care Act); two pieces of legislature that would spark the next decade of medical research and the evolution of technology in the clinical field. The growing field is accommodated with new students from different institutions and universities, young scientists taking step in a fast paced, and social topic.
 
-<p>With these two bills came a high demand for laboratory medicine; a medical discipline that involves researching, analyzing, and dissecting specimens for the health field. Within the laboratory medicine field, professional scientists work on a variety of things; from testing blood samples for illnesses like HIV, STIs, or cardiovascular disease, to testing species of body fluids in the research of virus resistance and vaccines. These are the scientists that test and analyze the results of other people’s work. Communication between these scientists is vital and clinical trials are thoroughly recorded and documented. 
+<p>With these two bills came a high demand for laboratory medicine; a medical discipline that involves researching, analyzing, and dissecting specimens for the health field. Within the laboratory medicine field, professional scientists work on a variety of things; from testing blood samples for illnesses like HIV, STIs, or cardiovascular disease, to testing species of body fluids in the research of virus resistance and vaccines. These are the scientists that test and analyze the results of other peopleï¿½s work. Communication between these scientists is vital and clinical trials are thoroughly recorded and documented. 
 </p>
 		</article>
 		<footer>
