--- a/blog.html
+++ b/blog.html
@@ -18,6 +18,24 @@
                         <li><a href="blog.html">blog</a></li>
                 </ul>
         </header>
+        <div id="menu">
+			<ul>
+			        <li><a href="blog.html">1</a></li>
+				<li><a href="blog2.html">2</a></li>
+				<li><a href="blog3.html">3</a></li>
+				<li><a href="blog4.html">4</a></li>
+				<li><a href="blog5.html">5</a></li>
+				<li><a href="blog6.html">6</a></li>
+				<li><a href="blog7.html">7</a></li>
+				<li><a href="blog8.html">8</a></li>
+				<li><a href="blog9.html">9</a></li>
+				<li><a href="blog10.html"10></a></li>
+				<li><a href="blog11.html">11</a></li>
+				<li><a href="blog12.html">12</a></li>
+				<li><a href="blog13.html">13</a></li>
+				<li><a href="blog14.html">14</a></li>
+				<li><a href="blog15.html">15</a></li>
+			</ul>
         <main>
                 <h1>lived experiences project- Video Response</h1>
                 <p>I believe the purpose of the video is to inform, educate, and warn people about suicide, love, and sexuality.
