--- a/blog.html
+++ b/blog.html
@@ -13,8 +13,8 @@
                         <li><a href="lived.html">lived <br />experiences</a></li>
                         <li><a href="cultural.html">cultural <br />analysis</a></li>
                         <li><a href="formal.html">formal <br />research</a></li>
-                        <li><a href="#">remix</a></li>
-                        <li><a href="#">course <br />retrospective</a></li>
+                        <li><a href="remix.html">remix</a></li>
+                        <li><a href="retro.html">course <br />retrospective</a></li>
                         <li><a href="blog.html">blog</a></li>
                 </ul>
         </header>
@@ -36,8 +36,10 @@
 				<li><a href="blog14.html">14</a></li>
 				<li><a href="blog15.html">15</a></li>
 			</ul>
+			<article>
         <main>
                 <h1>lived experiences project- Video Response</h1>
+                
                 <p>I believe the purpose of the video is to inform, educate, and warn people about suicide, love, and sexuality.
                 Through the explaination of the suicide of his uncle, the viewers develop a feeling of sadness and sympathy.
                 Not everyone knows how it is to lose a loved one, but in this case, we can see how harsh and unforgiving it is on this young man.
@@ -58,6 +60,7 @@
                 The video's topic make the viewer even more engaged, and maybe even relates more to certain people's lives. 
                 </p>
         </main>
+        </article>
         <footer>
                 <p>&copy; 2014 [Fredrick Qiu]</p>
         </footer>
