--- a/blog.html
+++ b/blog.html
@@ -36,6 +36,8 @@
 				<li><a href="blog14.html">14</a></li>
 				<li><a href="blog15.html">15</a></li>
 			</ul>
+	</div>
+	</header>
 			<article>
         <main>
                 <h1>lived experiences project- Video Response</h1>
