--- a/blog.html
+++ b/blog.html
@@ -38,7 +38,7 @@
 			</ul>
 	</div>
 	</header>
-			
+	<article>UM</article>		
         <main>
                 <h1>lived experiences project- Video Response</h1>
                 
