--- a/blog.html
+++ b/blog.html
@@ -38,7 +38,7 @@
 			</ul>
 	</div>
 	</header>
-	<article>UM</article>		
+	<article>		
         <main>
                 <h1>lived experiences project- Video Response</h1>
                 
@@ -62,7 +62,7 @@
                 The video's topic make the viewer even more engaged, and maybe even relates more to certain people's lives. 
                 </p>
         </main>
-       
+       </article>
         <footer>
                 <p>&copy; 2014 [Fredrick Qiu]</p>
         </footer>
