--- a/blog.html
+++ b/blog.html
@@ -29,7 +29,7 @@
 				<li><a href="blog7.html">7</a></li>
 				<li><a href="blog8.html">8</a></li>
 				<li><a href="blog9.html">9</a></li>
-				<li><a href="blog10.html"10></a></li>
+				<li><a href="blog10.html">10</a></li>
 				<li><a href="blog11.html">11</a></li>
 				<li><a href="blog12.html">12</a></li>
 				<li><a href="blog13.html">13</a></li>
