--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 	            					<li>Pulled pork</li>
 	        				</ul>
 				</ol>
-			and yeah. Now you basically know who I am.</p>
+			and yeah. Now you basically know who I am now, <em>congrats</em></p>
 		</main>
 		<footer>
 		<p>&copy; 2013 [Fredrick Qiu]</p>
