--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 			<ul>
 	    			<li>Age: 18</li>
 	    			<li>Gender: Male</li>
-	    			<li>Hometown: Oxford</li>
+	    			<li>Birthtown: Oxford</li>
+	    			<li>Hometown: Northville, MI</li>
+	    			<li>Major: BLS</li>
 			</ul>
 			<p>
 			<h4>Interests</h4>
