--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 			<p style="font-family:Impact;font-size:60"><em>I'm <strong>refrigerator</strong> cool</em></p>
 			<p style="font-size:8">Ooh Killem</p>
 			<ul>
+				<li>Name: Fred</li>
 	    			<li>Age: 18</li>
 	    			<li>Gender: Male</li>
 	    			<li>Birthtown: Oxford</li>
